SKN-125 removed extra unnecesary fields
